<resources>
    <string name="app_name">Library</string>
    <string name="Books">Books</string>
    <string name="wtr">Want to read</string>
    <string name="placeholder">place holder</string>
    <string name="notify">notifications</string>
    <string name="notification_clicked">notifications clicked</string>
    <string name="bell">No notifications yet</string>
    <string name="review">Reviews</string>
    <string name="fav">Favorite</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="name">Yasmine Ali</string>
    <string name="review_clicked">Reviews clicked</string>
    <string name="fav_clicked">Favorites clicked</string>
    <string name="search_clicked">Search clicked</string>
    <string name="profile_clicked">Profile clicked</string>
    <string name="settings_clicked">Settings clicked</string>
    <string name="xDescription">remove this book</string>
    <string name="coverDescription">book cover</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>